adicionada rota auth pra validação de logins
